--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     background: #e0e0e0;
     border-radius: 50px;
     height: 6px; /* minder hoge balk */
-    margin: 0 10px;
+    margin: 0 10px 0 50px; /* Extra marge links (50px) voor meer naar rechts */
     position: relative;
     overflow: hidden;
 }
@@ -159,6 +159,7 @@
     font-weight: 600;
     flex-shrink: 0;
 }
+
 
 
         /* Sections styling */
