--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Mijn Portfolio - Tim Vanberghen</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Vervang onderstaande link door een correcte koppeling naar Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
     <style>
@@ -235,7 +234,7 @@
         <div class="photo-container">
             <img src="profile-photo.png" alt="Foto van Tim Vanberghen">
         </div>
-        <p>Hallo! Mijn naam is Tim Vanberghen. Ik ben een student in de avondopleiding Graduaat IoT. Ondanks mijn graduaat IoT ligt mijn interesse meer in infrastructure. Hieronder vind je meer over mijn professionele en persoonlijke interesses.</p>
+        <p>Hallo! Mijn naam is Tim Vanberghen. Ik ben een student in de avondopleiding Graduaat IoT. Ondanks mijn graduaat IoT, ligt mijn interesse meer in infrastructure. Hieronder vind je meer over mijn professionele en persoonlijke interesses.</p>
         <ul>
             <li><strong>Naam:</strong> Tim Vanberghen</li>
             <li><strong>Geboortedatum:</strong> 22 mei 1990</li>
