--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
 
         .skill-bar-wrapper {
             flex-shrink: 0;
-            width: 200px; /* maximale breedte van de balk */
+            width: 200px; 
             background: #e0e0e0;
             border-radius: 50px;
-            height: 6px; /* minder hoge balk */
-            margin: 0 10px 0 50px; /* Extra marge links (50px) voor meer naar rechts */
+            height: 6px; 
+            margin: 0 10px 0 50px; 
             position: relative;
             overflow: hidden;
         }
@@ -159,7 +159,7 @@
             flex-shrink: 0;
         }
 
-        /* Sections styling */
+        
         .experience ul {
             margin: 0;
         }
