--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
             <li><strong>E-mailadres:</strong> <a href="mailto:timvanberghen@hotmail.com">timvanberghen@hotmail.com</a></li>
             <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/tim-vanberghen-409002226/" target="_blank">Mijn LinkedIn</a></li>
             <li><strong>CV:</strong> <a href="CV.pdf" target="_blank">Download mijn CV</a></li>
+            <li><strong>Github:</strong> <a href="https://github.com/r0345938/Docker-project" target="_blank">Mijn Github werkplekleren</a></li>
         </ul>
         <h3>Hobby's en Interesses</h3>
         <p>In mijn vrije tijd geniet ik van veldvoetbal en hardlopen. Deze activiteiten houden me fit en gefocust, zowel fysiek als mentaal.</p>
