--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <li>
                     <span class="job-title">Software developer/testing</span><br>
                     <span class="job-location">okt. 2024 - dec. 2024 | Genk, Brightest (Gumption)</span>
-                    <p class="job-description">Ontwikkeling van een embedded Linux-omgeving met Docker. Sensoren die data via MQTT naar een Mosquitto-broker stuurden, opslag in MySQL en visualisatie met Grafana. TDD (Test-driven development) toegepast voor codekwaliteit.</p>
+                    <p class="job-description">Ontwikkeling van een embedded Linux-omgeving met Docker. Sensoren die data via MQTT naar een Mosquitto-broker stuurden, opslag in MySQL en visualisatie met Grafana. Testing van code toegepast voor codekwaliteit.</p>
                 </li>
             </ul>
         </div>
